syntax = "proto3";

package utilserver;
  
// protoc-gen-go 版本大于1.4.0, proto文件需要加上go_package,否则无法生成
option go_package = "./utilserver";

// 截图请求参数
message GetSnapshotRequest {
    string videoName = 1;   // 视频名字
    string snapshotName = 2;    // 截图名字
    int64 frameNum = 3;   // 帧数
}

// 截图响应参数
message GetSnapshotResponse {

}

service Utilserver {
    // 通过ffmpeg来截图
    rpc GetSnapshot(GetSnapshotRequest) returns(GetSnapshotResponse);
}